feat: ISSUE-151 — AssertionResultMapper Utility
Co-Authored-By: Claude <noreply@anthropic.com>